# gstreamer

./: build.sh  crossfile-3ds.txt  meson.build
subprojects/gst-plugins-bad/gst-libs/gst/adaptivedemux/: meson.build
subprojects/gst-plugins-bad/sys/: meson.build
subprojects/gst-plugins-bad/sys/n3ds/: meson.build  n3ds.c  n3dsaudiosrc.c  n3dsaudiosrc.h  n3dsimagesink.c  n3dsimagesink.h  n3dsvideosrc.c  n3dsvideosrc.h
subprojects/gst-plugins-base/gst-libs/gst/pbutils/: descriptions.c
subprojects/gst-plugins-base/gst/tcp/: gstmultihandlesink.c  meson.build
subprojects/gst-plugins-good/gst/rtp/: gstrtph264pay.c  gstrtph265pay.c
subprojects/gstreamer/gst/: gstpluginloader.c  gstpoll.c  gstsystemclock.c  meson.build
